tinc-integration-tests/src/snapshots/tinc_integration_tests__optional_fields__optional_primitives_all_some.snap
---
source: tinc-integration-tests/src/optional_fields.rs
expression: state
---
TrackerSharedState {
    fail_fast: false,
    errors: [],
}
