tinc-integration-tests/src/snapshots/tinc_integration_tests__optional_fields__optional_with_constraints_invalid_ipv4.snap
---
source: tinc-integration-tests/src/optional_fields.rs
expression: state
---
TrackerSharedState {
    fail_fast: false,
    errors: [
        TrackedError {
            kind: InvalidField {
                message: "value must be a valid ipv4 address",
            },
            fatal: true,
            path: "ipv4",
        },
    ],
}
