tinc-integration-tests/src/snapshots/tinc_integration_tests__optional_fields__wrapper_types_all_omitted-2.snap
---
source: tinc-integration-tests/src/optional_fields.rs
expression: message
---
{
  "string_value": null,
  "int32_value": null,
  "int64_value": null,
  "uint32_value": null,
  "uint64_value": null,
  "float_value": null,
  "double_value": null,
  "bool_value": null,
  "bytes_value": null
}
